# EchoScribe

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
echoscribe/: __init__.py  cli.py  config.py
echoscribe/services/: __init__.py  recorder.py  slack.py  summarization.py  transcription.py
echoscribe/utils/: __init__.py
tests/: test_config.py  test_summarization.py
